[#018] Fixed the bug when jump from game page to index page. Modify the html and css file

--- a/CognitionMonitor/assets/calm-breeze/css/style.css
+++ b/CognitionMonitor/assets/calm-breeze/css/style.css
@@ -44,8 +44,8 @@ body :-ms-input-placeholder {
   top: 50%;
   left: 0;
   width: 100%;
-  height: 600px;
-  margin-top: -300px;
+  height: 700px;
+  margin-top: -350px;
   overflow: hidden;
 }
 .wrapper.form-success .container h1 {
