--- a/CognitionMonitor/assets/css/game-style.css
+++ b/CognitionMonitor/assets/css/game-style.css
@@ -9,7 +9,7 @@ root {
 
 body {
 	background-color: #fff;
-	margin: 0px 0px 0px 0px;
+	margin: 20px 0px 0px 0px;
 }
 
 body article#game {
@@ -25,7 +25,7 @@ header div {
 }
 
 #board {
-	padding-top: 10px;
+	padding-top: 0px;
     width: 460px;
     height: 570px;
 	background-color: rgb(228, 223, 208);
